--- a/style.css
+++ b/style.css
@@ -35,16 +35,16 @@ body {
 }
 
 .container {
-    width: 57rem;
+    width: 58rem;
     height: 34rem;
-    padding: 1rem 4.5rem 1rem 1rem;
+    padding: 1rem 5.5rem 1rem 1rem;
     background-color: var(--White);
     border-radius: .5rem;
     display: flex;
 }
 
 .container .sidebar {
-    width: 20rem;
+    width: 19rem;
     padding: 2rem 2rem;
     color: var(--White);
     background-image: url(assets/images/bg-sidebar-desktop.svg);
@@ -83,17 +83,17 @@ body {
 }
 
 .container .steps {
-    width: calc(100% - 23rem);
-    padding-top: 2rem;
+    width: calc(100% - 19rem);
+    padding: 2rem 0 0 2rem;
 }
 
-.container .steps h2 {
+.container .steps .step > h2 {
     font-size: 2rem;
     color: var(--Marine-blue);
     margin-bottom: .5rem;
 }
 
-.container .steps p {
+.container .steps .step > p {
     color: var(--Cool-gray);
     margin-bottom: 2rem;
 }
@@ -117,9 +117,23 @@ body {
     border: 1px solid var(--Cool-gray)
 }
 
-.container .steps .step button.next {
+.container .steps .step .back-next-confirm {
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.container .steps .step .back-next-confirm {
+    justify-content: space-between;
+}
+
+.container .steps .step.step-one .back-next-confirm {
+    margin-top: 6rem;
+    justify-content: flex-end;
+}
+
+.container .steps .step .back-next-confirm button.next {
     padding: .8rem 1.5rem;
-    margin-top: 5rem;
     color: var(--White);
     font-weight: 500;
     background-color: var(--Marine-blue);
@@ -127,7 +141,111 @@ body {
     border-radius: .5rem;
 }
 
+/* .container .steps .step-one {
+    display: none;
+}
 
-.container .steps .step-one button.next {
-    float: right;
+.container .steps .step-two {
+    display: block;
+} */
+
+.container .steps .step-two .options {
+    display: flex;
+    margin-bottom: 2rem;
+    column-gap: 1rem;
+}
+
+
+.container .steps .step-two .options > div {
+    width: calc(100% - 2rem);
+    padding: 1rem;
+    border: 1px solid var(--Light-gray);
+    border-radius: .5rem;
+}
+
+.container .steps .step-two .options > div img {
+    margin-bottom: 3rem;
+}
+
+.container .steps .step-two .options > div p {
+    margin-bottom: .2rem;
+    font-weight: 500;
+    color: var(--Marine-blue);
+}
+
+.container .steps .step-two .options > div span {
+    font-weight: 400;
+    font-size: .8rem;
+    color: var(--Cool-gray);
+}
+
+.container .steps .step-two .billing {
+    width: 100%;
+    height: 3rem;
+    font-size: .8rem;
+    font-weight: 700;
+    color: var(--Cool-gray);
+    background-color: var(--Alabaster);
+    border-radius: .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 1.5rem;
+}
+
+.container .steps .step-two .billing .switch {
+    display: inline-block;
+    width: 2.1rem;
+    height: 1.1rem;
+    background-color: var(--Marine-blue);
+    border-radius: 2rem;
+    position: relative;
+}
+
+.container .steps .step-two .billing .switch input {
+    width: 0;
+    height: 0;
+    opacity: 0;
+}
+
+
+
+.container .steps .step-two .billing .switch .slider {
+    content: "";
+    position: absolute;
+    width: .7rem;
+    height: .7rem;
+    border-radius: 50%;
+    background-color: var(--White);
+    top: 50%;
+    left: .2rem;
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    -webkit-transition: .3s;
+    transition: .3s;
+}
+
+.container .steps .step-two .billing .switch input:checked + .slider {
+    -webkit-transform: translateY(-50%);
+    transform: translateY(-50%);
+    left: 1.2rem;
+}
+
+.container .steps .step-two .back-next-confirm {
+    margin-top: 5.6rem;
+}
+
+.container .steps .step .back-next-confirm p {
+    font-size: .9rem;
+    font-weight: 700;
+    color: var(--Marine-blue);
+}
+
+.container .steps .step-one,
+.container .steps .step-two {
+    display: none;
+}
+
+.container .steps .step-three {
+    display: block;
 }
