--- a/style.css
+++ b/style.css
@@ -486,10 +486,23 @@ body {
   .container .steps .step-one .input-infos > div input:hover,
   .container .steps .step .back-next-confirm button.next:hover,
   .container .steps .step .back-next-confirm p:hover,
+  .container .steps .step-four .back-next-confirm button.confirm:hover,
   .container .steps .step-two .payments .options > div:hover,
   .container .steps .step-three .services > div:hover,
   .container .step-four .dynamic-sec .option-choice-change .change:hover {
     cursor: pointer;
+  }
+
+  .container .steps .step .back-next-confirm button.next:hover {
+    opacity: 0.9;
+  }
+
+  .container .steps .step .back-next-confirm p:hover {
+    color: var(--Marine-blue);
+  }
+
+  .container .steps .step-four .back-next-confirm button.confirm:hover {
+    opacity: 0.8;
   }
 
   .container .steps .step-two .payments .options > div:hover {
@@ -503,4 +516,60 @@ body {
   .container .step-four .dynamic-sec .option-choice-change .change:hover {
     opacity: 1;
   }
+}
+
+@media (max-width: 950px) {
+  body {
+    width: auto;
+    height: auto;
+  }
+
+  .container {
+    width: 100%;
+    height: 80%;
+    padding: 0rem 0rem 1rem 0rem;
+    flex-direction: column;
+    background-color: var(--Magnolia);
+  }
+
+  .container .sidebar {
+    width: 100%;
+    padding: 2rem 0 8rem;
+    display: flex;
+    justify-content: center;
+    background-image: url(assets/images/bg-sidebar-mobile.svg);
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+
+  .container .sidebar > div > div:nth-child(2) {
+    display: none;
+  }
+
+  .container .sidebar > div {
+    margin-bottom: 0;
+  }
+
+  .container .steps {
+    width: 90%;
+    height: 33rem;
+    padding: 2rem 1.5rem 1.5rem;
+    margin: -5rem auto;
+    background-color: var(--White);
+    border-radius: 0.5rem;
+  }
+
+  .container .thank-you {
+    width: 90%;
+    padding: 5rem 1rem;
+    margin: -5rem auto;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--White);
+    border-radius: 0.5rem;
+  }
+}
+
+@media (max-width: 450px) {
 }
